# docs/swagger.json
@@ -486,6 +486,62 @@
                 }
             }
         },
+        "/api/v1/device/report-status": {
+            "post": {
+                "description": "上报设备状态",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "设备"
+                ],
+                "summary": "上报设备状态",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "设备ID",
+                        "name": "device_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "设备状态",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dao.DeviceStatus"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "上报成功"
+                    },
+                    "400": {
+                        "description": "请求参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "未授权",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "内部服务器错误",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/device/unregister": {
             "post": {
                 "description": "注销设备",
@@ -2320,6 +2376,14 @@
                 }
             }
         },
+        "dao.DeviceJobStatus": {
+            "type": "object",
+            "properties": {
+                "exectorStatus": {
+                    "$ref": "#/definitions/model.ExectorStatus"
+                }
+            }
+        },
         "dao.DeviceSpec": {
             "type": "object",
             "properties": {
@@ -2340,6 +2404,17 @@
                 },
                 "uuid": {
                     "type": "string"
+                }
+            }
+        },
+        "dao.DeviceStatus": {
+            "type": "object",
+            "properties": {
+                "jobStatus": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/dao.DeviceJobStatus"
+                    }
                 }
             }
         },
@@ -2372,6 +2447,7 @@
             "type": "object",
             "required": [
                 "createTime",
+                "enabled",
                 "input",
                 "kind",
                 "status",
@@ -2387,6 +2463,9 @@
                 },
                 "device": {
                     "$ref": "#/definitions/dao.DeviceSpec"
+                },
+                "enabled": {
+                    "type": "boolean"
                 },
                 "id": {
                     "type": "integer"
@@ -2698,12 +2777,6 @@
                 "input": {
                     "type": "string"
                 },
-                "query": {
-                    "type": "string"
-                },
-                "resultFilter": {
-                    "$ref": "#/definitions/dao.FilterCondition"
-                },
                 "videoSegment": {
                     "$ref": "#/definitions/dao.VideoSegmentOptions"
                 },
@@ -2821,6 +2894,21 @@
                     "type": "string"
                 }
             }
+        },
+        "model.ExectorStatus": {
+            "type": "integer",
+            "enum": [
+                0,
+                1,
+                2,
+                3
+            ],
+            "x-enum-varnames": [
+                "ExectorStatusStopped",
+                "ExectorStatusRunning",
+                "ExectorStatusFinished",
+                "ExectorStatusFailed"
+            ]
         },
         "model.JobKind": {
             "type": "string",
